--- a/view/css.css
+++ b/view/css.css
@@ -1,19 +1,19 @@
-
-body{
+body {
     margin: 0 auto;
     padding: 0;
     align-items: center;
-    
-    font-family:  "Roboto",sans-serif;
+
+    font-family: "Roboto", sans-serif;
     background-color: white;
-    
+
 }
 
-header{
-    
+header {
+
     background-color: #fd213b;
 }
-.D1{ 
+
+.D1 {
     margin: 0 auto;
     display: flex;
     border-bottom: 1px dashed white;
@@ -24,94 +24,108 @@ header{
     grid-template-columns: 1fr 2fr 0.5fr 0.5fr;
 
 }
-#tk::placeholder{
+
+#tk::placeholder {
     position: absolute;
     left: 20px;
 
 }
 
-.D1 .taiKhoan a{
-    text-decoration: none;
-    color: white;
-    
-}
-.D1 .gioHang a{
+.D1 .taiKhoan a {
     text-decoration: none;
     color: white;
 
 }
-.taiKhoan{
+
+.D1 .gioHang a {
+    text-decoration: none;
+    color: white;
+
+}
+
+.taiKhoan {
     display: grid;
     grid-template-columns: 1fr;
     gap: 3px;
     width: 110px;
 }
-.gioHang{
+
+.gioHang {
     display: grid;
     grid-template-columns: 1fr;
     width: 110px;
-   
+
 
 }
-.timKiem{
-   position: relative;
+
+.timKiem {
+    position: relative;
     display: flex;
     align-items: center;
 }
-.timKiem::placeholder{
+
+.timKiem::placeholder {
     border: none;
     padding: 20px;
 }
-.timKiem button{
+
+.timKiem button {
     color: #fd213b;
     text-decoration: none;
     width: 80px;
     height: 48px;
-    border-radius:0 15px 15px 0px;
+    border-radius: 0 15px 15px 0px;
     border: none;
     background-color: white;
     position: absolute;
     left: 460px;
     border-left: 1px solid #fd213b;
-    
-    
+
+
 }
-.ip_timKiem{
+
+.ip_timKiem {
     font-weight: bold;
     font-size: 15px;
 }
-.timKiem input{
+
+.timKiem input {
     width: 545px;
     height: 50px;
     border-radius: 15px;
     border: none;
 }
-nav{
+
+nav {
     margin: 0 auto;
     display: flex;
     align-items: center;
     background-color: #fd213b;
     max-width: 1270px;
 }
-nav ul{
-    
+
+nav ul {
+
     padding: 0;
 }
 
-nav ul li:not(:first-child){
-   
+nav ul li:not(:first-child) {
+
     margin-left: 40px;
-    
-} 
-nav ul li{
+
+}
+
+nav ul li {
     display: inline-block;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: white;
     font-weight: bold;
 }
-main{
+
+main {
     max-width: 1270px;
     margin: 0 auto;
     display: grid;
@@ -119,58 +133,65 @@ main{
     gap: 20px;
     margin-top: 20px;
 }
-.banner{
+
+.banner {
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 20px;
     height: 425px;
 }
 
-    
 
 
 
-.danhMuc{
+
+.danhMuc {
     background-color: white;
     border-radius: 10px;
 }
-.danhMuc h2{
+
+.danhMuc h2 {
     margin-left: 15px;
-    
+
 }
-.danhMuc .dm{
+
+.danhMuc .dm {
     position: relative;
     display: flex;
     align-items: center;
     height: 50px;
-    
-    border-bottom: 1px dashed rgb(158, 158, 158) ;
-    
+
+    border-bottom: 1px dashed rgb(158, 158, 158);
+
 }
 
-.danhMuc .dm img{
+.danhMuc .dm img {
     margin-left: 10px;
-   height: 40px;
+    height: 40px;
 }
-.danhMuc ul{
+
+.danhMuc ul {
     margin-top: -1px;
     padding: 0;
-    
+
 }
-.danhMuc ul li{
-    
-    height:42px ;
-    border-bottom: 1px dashed rgb(158, 158, 158) ;
+
+.danhMuc ul li {
+
+    height: 42px;
+    border-bottom: 1px dashed rgb(158, 158, 158);
     list-style: none;
     display: flex;
     align-items: center;
 }
-.danhMuc a{
+
+.danhMuc a {
     text-decoration: none;
     margin-left: 15px;
     color: black;
 }
-.km{
+
+.km {
     width: 100%;
     height: 100px;
     background-color: white;
@@ -178,88 +199,101 @@ main{
     border-radius: 15px;
     display: flex;
     align-items: center;
-    
-    
+
+
 }
-.km .km1 img{
-    height:60px ;
+
+.km .km1 img {
+    height: 60px;
     width: 60px;
     margin-left: 15px;
 }
-.km .km1{
+
+.km .km1 {
     display: grid;
     grid-template-columns: 1fr;
     margin-left: 25px;
 }
-.km .km1 a{
+
+.km .km1 a {
     color: black;
     text-decoration: none;
 }
-.box{
+
+.box {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px ;
+    gap: 20px;
     background-color: #e7eef6;
 }
-.box1{
+
+.box1 {
     background-color: white;
     border-radius: 15px;
 }
-.box2{
+
+.box2 {
     background-color: white;
     border-radius: 15px;
 
 }
-.sanPhamMoi{
+
+.sanPhamMoi {
     margin-top: -39.9px;
     background-color: white;
     width: 100%;
     grid-column: 1 / span 2;
-    border-radius:0 0 15px 15px ;
-    border-top:1px #c9c9c9 solid;
-   
-    
+    border-radius: 0 0 15px 15px;
+    border-top: 1px #c9c9c9 solid;
+
+
 }
-.banner h2{
-    margin-top:0px;
+
+.banner h2 {
+    margin-top: 0px;
     display: flex;
-    background-color:white;
+    background-color: white;
     grid-column: 1 / span 2;
     height: 60px;
     align-items: center;
-    border-radius: 15px 15px 0 0; 
-    border-top:3px  #fd213b solid;
+    border-radius: 15px 15px 0 0;
+    border-top: 3px #fd213b solid;
     padding-left: 10px;
-    
+
 }
-.sanPhamMoi .sanPham{
+
+.sanPhamMoi .sanPham {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 100%;
 
 
 }
-.sanPham img{
+
+.sanPham img {
     width: 100%;
-    
-}
-.sp1 .cap{
-    margin: 5px;
-    font-weight: bold;
-   
 
 }
-.sp1 a{
+
+.sp1 .cap {
+    margin: 5px;
+    font-weight: bold;
+
+
+}
+
+.sp1 a {
     font-size: 18px;
-     color: black;
+    color: black;
     text-decoration: none;
 }
-.sp1 p{
+
+.sp1 p {
     font-size: 16px;
     color: #fd213b;
 }
 
-#themHang{
+#themHang {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -268,92 +302,100 @@ main{
     align-items: center;
     cursor: pointer;
     background-color: white;
-    box-shadow:0 0 5px #fd213b;
+    box-shadow: 0 0 5px #fd213b;
     border: solid #fd213b 1px;
 }
-#themHang img{
+
+#themHang img {
     border-radius: 50%;
 }
-.sp1{
-    border-right: #e7eef6  1px dashed;
+
+.sp1 {
+    border-right: #e7eef6 1px dashed;
 }
+
 .cap2 {
     font-weight: bold;
     margin-left: 5px;
     display: grid;
     grid-template-columns: 2fr 1fr;
 }
-.th img{
-     width: 100%;
-   padding: 10px;
+
+.th img {
+    width: 100%;
+    padding: 10px;
     width: 148px;
     height: 149px;
-    
-   
-    
+
+
+
 }
 
-.th a img{
+.th a img {
     width: 110px;
     height: 40px;
-    
-   
+
+
     border-radius: 15px;
     box-shadow: 1px 1px 2px 1px rgb(162, 162, 162);
     margin: auto;
-    
-  
-    
-    
+
+
+
+
 }
-.logoth{
+
+.logoth {
     text-align: center;
 }
-.th{
+
+.th {
     border: 1px solid #ffe4e4;
     background-color: white;
     border-radius: 5px;
     margin: auto;
     width: 179px;
     height: 254px;
-    
-  
+
+
 
 }
 
 
-.loaiSp h2{
+.loaiSp h2 {
     width: 1270px;
     margin: auto;
     background-color: white;
     margin-top: 15px;
     line-height: 55px;
     border-radius: 15px 15px 0px 0px;
-    
+
 }
 
-.loaiSp .thuongHieu{
+.loaiSp .thuongHieu {
     margin: auto;
     background-color: white;
     border-radius: 0 0 10px 10px;
     max-width: 1270px;
     display: grid;
     height: 280px;
-    
+
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-   
+
 }
-.sanPhamAll .sanPham{
+
+.sanPhamAll .sanPham {
     max-width: 1270px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     background-color: white;
-    border-radius:0px 0px 15px 15px;
+    border-radius: 0px 0px 15px 15px;
     margin-bottom: 20px;
-   
+
 }
-.capgy{
+
+.capgy {
     max-width: 1270px;
     margin: 0 auto;
     line-height: 55px;
@@ -361,108 +403,125 @@ main{
     margin-top: 20px;
     border-radius: 15px 15px 0px 0px;
     border-bottom: 1px solid #e7eef6;
-    
+
 }
-.tinTuc{
+
+.tinTuc {
     max-width: 1270px;
     margin: 0 auto;
     background-color: white;
-    border-radius:0px 0px 15px 15px;
-    
+    border-radius: 0px 0px 15px 15px;
+
 }
-h3{
+
+h3 {
     max-width: 1270px;
     margin: 0 auto;
     background-color: white;
     border-radius: 15px 15px 0px 0px;
     line-height: 55px;
-    
-   
-    
-    
+
+
+
+
 }
-.bangTin{
+
+.bangTin {
     display: grid;
     grid-template-columns: 1.5fr 2fr 1.4fr;
-    gap:10px;
-    
+    gap: 10px;
+
 }
-.bangTin a{
+
+.bangTin a {
     color: black;
     text-decoration: none;
     font-size: 16px;
-    
+
 }
-.tinMoi img{
-    margin: 5px 5px ;
+
+.tinMoi img {
+    margin: 5px 5px;
     width: 383px;
     height: 216px;
     border-radius: 5px;
 }
-.tinMoi .capTin a{
+
+.tinMoi .capTin a {
     margin: auto;
     margin-left: 5px;
 }
-.tinMoi a{
+
+.tinMoi a {
     margin-left: 10px;
 }
-.tinMoi p{
+
+.tinMoi p {
     margin-left: 10px;
 }
-.tinCon{
+
+.tinCon {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 10px;
     margin-top: 15px;
 }
-.tinLe img{
+
+.tinLe img {
     width: 140px;
     height: 80px;
     border: 1px black solid;
 }
-.meoVat{
+
+.meoVat {
     border: 1px solid #fd213b;
-    border-radius:  0 0 10px 0;
+    border-radius: 0 0 10px 0;
 }
 
-.meoVat h3{
+.meoVat h3 {
     background-color: #fd213b;
     color: white;
     border-radius: 0;
     padding-left: 5px;
 
 }
-.meoVat .meo1{
+
+.meoVat .meo1 {
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
-.meo1 img{
+
+.meo1 img {
     border: 1px solid black;
     margin: 5px;
     width: 100px;
 }
-.meo1 a{
+
+.meo1 a {
     margin: 5px;
 }
 
 
-.tinTuc a{
+.tinTuc a {
     font-weight: bold;
     font-size: 16px
 }
+
 /* footer */
-.ftlh p{
-    color: rgba(255,255,255,0.8);
+.ftlh p {
+    color: rgba(255, 255, 255, 0.8);
     font-size: 15px;
     margin-top: 6px;
 }
-footer{
+
+footer {
     background-color: #3b3b3b;
     color: white;
     margin-top: 20px;
-    
+
 }
-footer .footer{
+
+footer .footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     max-width: 1270px;
@@ -470,122 +529,148 @@ footer .footer{
     padding: 30px 0;
     gap: 30px;
 }
-.footer h4{
-   margin: 0;
+
+.footer h4 {
+    margin: 0;
 }
 
 .fthd a,
-.ftcskh a{
-   line-height: 35px;
-   text-decoration: none;
-   color: rgba(255,255,255,0.8);
-   font-size: 15px;
+.ftcskh a {
+    line-height: 35px;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 15px;
 }
+
 .fthd a:hover,
-.ftcskh a:hover{
+.ftcskh a:hover {
     color: red;
 }
 
-footer hr{
-border:none;
-  border-top:2px dotted white;
-  color:#fff;
-  width:1270px;
+footer hr {
+    border: none;
+    border-top: 2px dotted white;
+    color: #fff;
+    width: 1270px;
 }
-footer .logo{
+
+footer .logo {
     max-width: 1270px;
     display: flex;
     padding: 10px 0;
     margin: 0 auto;
 }
-.footer h3{
+
+.footer h3 {
     background-color: #3b3b3b;
 }
-footer .logo img{
+
+footer .logo img {
     margin-left: 700px;
 }
-.kn img{
+
+.kn img {
     width: 50px;
 }
-.dowload img{
+
+.dowload img {
     margin: 0;
     width: 130px;
 }
-.dowload{
+
+.dowload {
     margin: 20px 0;
 }
-.thanhtoan img{
+
+.thanhtoan img {
     width: 100%;
 }
-.menu{
+
+.menu {
     display: flex;
     list-style: none;
     max-width: 1270px;
     margin: 0 auto;
 }
-.menu li{
+
+.menu li {
     margin-top: 15px;
     font-size: 16px;
-   
-}
-.menu li a{
-    text-decoration: none;
-    color: rgba(43,47,51,0.4);
-}
-.menu li a:hover{
-    color: #fd213b;
-}
-.menu p{
-    margin-left: 18px;
-    color: rgba(43,47,51,0.4);
 
 }
-.gt{
+
+.menu li a {
+    text-decoration: none;
+    color: rgba(43, 47, 51, 0.4);
+}
+
+.menu li a:hover {
+    color: #fd213b;
+}
+
+.menu p {
+    margin-left: 18px;
+    color: rgba(43, 47, 51, 0.4);
+
+}
+
+.gt {
     max-width: 1270px;
     width: 100%;
     margin: 0 auto;
     height: 500px;
     line-height: 20px;
 }
-.lh{
+
+.lh {
     max-width: 1270px;
     width: 100%;
     display: flex;
     margin: 0 auto;
 }
-.form_lh{
+
+.form_lh {
     width: 50%;
     margin: 0;
 }
-.form_lh img{
+
+.form_lh img {
     width: 20px;
     margin-top: 10px;
 }
-.form_lh b{
+
+.form_lh b {
     margin-left: 10px;
 }
+
 .llh {
     width: 100%;
-   
+
 }
-.llh input{
+
+.llh input {
     width: 590px;
-   height: 33px;
-   border: 1px solid #d2d2d2;
-   padding-left: 20px;
-   font-size: 15px;
+    height: 33px;
+    border: 1px solid #d2d2d2;
+    padding-left: 20px;
+    font-size: 15px;
 }
-.mt15{
+
+.mt15 {
     margin-top: 15px;
 }
-.llh textarea{
+.mt120{
+    margin-top: 120px;
+}
+.llh textarea {
     font-size: 16px;
     padding-top: 10px;
     width: 590px;
     padding-left: 20px;
     border: 1px solid #d2d2d2;
 }
-.llh button{
+
+.llh button {
     width: 122px;
     height: 37px;
     font-size: 15px;
@@ -593,10 +678,128 @@ footer .logo img{
     background-color: #3b3b3b;
     border: none;
 }
-.llh button:hover{
-background-color: #fd6a21;
-border: none;
+
+.llh button:hover {
+    background-color: #fd6a21;
+    border: none;
 }
-.bando iframe{
+
+.bando iframe {
     height: 505px;
+}
+.giohang_container_trai_m{
+    width: 75%;
+    position: relative;
+}
+.dathang_m {
+    width: 100%;
+    border: 1px solid rgb(220, 220, 220);
+
+}
+
+.container_giohang_m {
+    max-width: 1270px;
+    width: 100%;
+    display: flex;
+    margin: auto;
+}
+
+.thongtinsanpham_m {
+    display: flex;
+}
+.thongtinsanpham_m img{
+    width: 120px;
+}
+
+.thoigiangiaohang_m {
+    width: 25%;
+    background-color: #c9c9c9;
+}
+
+
+
+.giohang_menu_m {
+    display: grid;
+    grid-template-columns: 4fr 1.1fr 1.1fr 0.8fr;
+    padding: 10px;
+
+}
+
+.giohang_thongtinsanpham_sp_m {
+    display: grid;
+    grid-template-columns: 4fr 1fr 1fr 1fr;
+    align-items: center;
+    border-top: 1px solid rgb(220, 220, 220);
+    padding: 20px;
+
+}
+
+.giohang_soluong_m {
+    margin: 0;
+    padding: 0;
+}
+
+.giohang_themsoluong_m {
+    width: 22px;
+    height: 22px;
+    border: 1px solid rgb(175, 175, 175);
+    text-align: center;
+
+}
+
+.giohang_tru {
+    width: 26px;
+    height: 26px;
+    border: 1px solid rgb(175, 175, 175);
+    background-color: white;
+}
+
+.giohang_cong {
+    width: 26px;
+    height: 26px;
+    border: 1px solid rgb(175, 175, 175);
+    background-color: white;
+}
+.chitiet_m {
+    margin-top: 25px;
+}
+
+.chitiet_m a{
+text-decoration: none;
+}
+.black{
+    color: black;
+}
+.red{
+    color: red;
+}
+.td7{
+    margin:7px 0 ;
+}
+.namesp:hover{
+color: #fd6a21;
+}
+.giohang_tinhtien{
+    width: 240px;
+    text-align: right;
+    position: absolute;
+    right: 0px;
+}
+.giohang_tien_m{
+    display: flex;
+    align-items: center;
+    
+}
+.giohang_tien_m b{
+    position: absolute;
+    right: 0;
+}
+.giohang_tinhtien input{
+    width: 240px;
+    text-align: center;
+    align-items: center;
+    background-color: #333;
+    color: #fff;
+    background-color: 1px solid #333;
+    height: 40px;
 }
